0.8.0 [2013-05-31]
Some class interface cleanup.
Satellites list management:
- improved multiple selection handling and operations (toggling display and
orbit flags, etc.)
- editable satellite groups; adding custom groups
- localization of default satellite group names and satellite descriptions
- list entry indicates hint color
Update management:
- automatic adding of new satellites on update from selected update sources;
by default, only new naked-eye satellites are auto-added
- automatic removal of satellites if they are no longer listed in the update
sources
- "user-defined" flag protecting satellites from update/removal

WARNING! There have been changes to the config.ini section format, but they are
backwards-compatible.

0.7.3
Use editable keybindings

0.7.2 [2012-07-26]
Added "Mark all" and "Mark none" buttons to the satellites import window.
Added a search/filter feature to the main satellites list.
Fixed duplicate name confusion on double-clicking a satellite in the list.
Implemented satellite NORAD number search in Stellarium's main search.
Support night vision mode

0.7.1 [2012-01-08]
Added basic GUI for adding satellites from TLE lists.
Added CelesTrak's tle-new.txt to the default sources list to make adding fresh
satellites easier.
UPDATE THIS! (There have been multiple changes between this date and the time
Stellarium 0.10.3 was released with the same plug-in version number.)

0.7.0 [2011-12-13]
Use catalog number instead of satellite name as an identifier.
Save dates as proper JSON strings (before they broke stricter parsers).
Display the catalog number and the International Designator in the info field.

0.6.4 [2010-11-18]
Add ability to update TLE data from files.
Better docuentation in the About tab.

0.6.3 [2010-11-16]
Update status message show how many satellites got new elements.
Update status message includes how many were missing in update URLs.
Add lastUpdate date to the JSON data.

0.6.2 [2010-11-16]
Refactored json load/save.