@@ -1,3 +1,5 @@
+include "no group assigned" secundary filter
+
 0.8.0 [2013-05-31]
 Some class interface cleanup.
 Satellites list management:
